--- a/README
+++ b/README
@@ -136,12 +136,15 @@ Email Support
 * mailto://
    mailto://userid:pass@domain.commailto://domain.com?user=userid&pass=password
    mailto://domain.com:2525?user=userid&pass=password
-   mailto://user@gmail.com&pass=passwordmailto://userid:password@example.com?smtp=mail.example.com&from=noreply@example.com&name=no%20reply
+   mailto://user@gmail.com&pass=password
+   mailto://mySendingUsername:mySendingPassword@example.com?to=receivingAddress@example.com
+   mailto://userid:password@example.com?smtp=mail.example.com&from=noreply@example.com&name=no%20reply
 
 * mailtos//
    mailtos://userid:pass@domain.com
    mailtos://domain.com?user=userid&pass=password
    mailtos://domain.com:465?user=userid&pass=passwordmailtos://user@hotmail.com&pass=password
+   mailtos://mySendingUsername:mySendingPassword@example.com?to=receivingAddress@example.com
    mailtos://userid:password@example.com?smtp=mail.example.com&from=noreply@example.com&name=no%20reply
 
 Apprise have some email services built right into it (such as yahoo, fastmail, hotmail, gmail, etc) that greatly simplify the mailto:// service.
