--- a/apprise/i18n/apprise.pot
+++ b/apprise/i18n/apprise.pot
@@ -6,16 +6,16 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: apprise 0.7.6\n"
+"Project-Id-Version: apprise 0.7.8\n"
 "Report-Msgid-Bugs-To: lead2gold@gmail.com\n"
-"POT-Creation-Date: 2019-05-28 16:56-0400\n"
+"POT-Creation-Date: 2019-06-06 12:49-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.6.0\n"
+"Generated-By: Babel 2.7.0\n"
 
 msgid "API Key"
 msgstr ""
@@ -123,6 +123,9 @@ msgid "Overflow Mode"
 msgstr ""
 
 msgid "Password"
+msgstr ""
+
+msgid "Path"
 msgstr ""
 
 msgid "Port"
