--- a/packaging/man/apprise.1
+++ b/packaging/man/apprise.1
@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "APPRISE" "1" "November 2019" "" ""
+.TH "APPRISE" "1" "January 2020" "" ""
 .
 .SH "NAME"
 \fBapprise\fR \- Push Notifications that work with just about every platform!
@@ -72,8 +72,14 @@ Display the apprise version and exit\.
 \fB\-\-help\fR
 Show this message and exit\.
 .
+.SH "EXIT STATUS"
+\fBapprise\fR exits with a status 0 if all notifications were sent successfully otherwise \fBapprise\fR returns a value of 1\.
+.
+.P
+\fBapprise\fR exits with a status of 2 if there were no notifcations sent due (as a result of end user actions)\. This occurs in the case where you have assigned one or more tags to all of the Apprise URLs being notified and did not match any when actually executing the \fBapprise\fR tool\. This can also occur if you specified a tag that has not been assigned to anything defined in your configuration\.
+.
 .SH "SERVICE URLS"
-There are to many service URL and combinations to list here\. It\'s best to visit the Apprise GitHub page \fIhttps://github\.com/caronc/apprise\fR and see what\'s available\.
+There are to many service URL and combinations to list here\. It\'s best to visit the Apprise GitHub page \fIhttps://github\.com/caronc/apprise/wiki#notification\-services\fR and see what\'s available\.
 .
 .SH "EXAMPLES"
 Send a notification to as many servers as you want to specify as you can easily chain them together:
@@ -151,4 +157,4 @@ $ apprise \-t \'School Assignment\' \-b \'See attached\' \e
 \fBApprise\fR is written in Python with 100% test coverage; but it still makes it far from perfect since the notification services it talks to change all the time\. If you find any bugs, please make them known at: \fIhttps://github\.com/caronc/apprise/issues\fR
 .
 .SH "COPYRIGHT"
-Apprise is Copyright (C) 2019 Chris Caron \fIlead2gold@gmail\.com\fR
+Apprise is Copyright (C) 2020 Chris Caron \fIlead2gold@gmail\.com\fR
