--- a/apprise/i18n/apprise.pot
+++ b/apprise/i18n/apprise.pot
@@ -6,9 +6,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: apprise 0.8.3\n"
+"Project-Id-Version: apprise 0.8.4\n"
 "Report-Msgid-Bugs-To: lead2gold@gmail.com\n"
-"POT-Creation-Date: 2020-01-12 18:39-0500\n"
+"POT-Creation-Date: 2020-02-01 12:59-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -171,6 +171,9 @@ msgid "Log PID"
 msgstr ""
 
 msgid "Log to STDERR"
+msgstr ""
+
+msgid "Memory"
 msgstr ""
 
 msgid "Message Hook"
