--- a/packaging/man/apprise.1
+++ b/packaging/man/apprise.1
@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "APPRISE" "1" "January 2020" "" ""
+.TH "APPRISE" "1" "July 2020" "" ""
 .
 .SH "NAME"
 \fBapprise\fR \- Push Notifications that work with just about every platform!
@@ -47,6 +47,10 @@ Specify one or more file attachment locations\.
 .TP
 \fB\-n\fR, \fB\-\-notification\-type=\fR\fITYPE\fR
 Specify the message type (default=info)\. Possible values are "info", "success", "failure", and "warning"\.
+.
+.TP
+\fB\-i\fR, \fB\-\-input\-format=\fR\fIFORMAT\fR
+Specify the input message format (default=text)\. Possible values are "text", "html", and "markdown"\.
 .
 .TP
 \fB\-T\fR, \fB\-\-theme=\fRTHEME
@@ -154,7 +158,7 @@ $ apprise \-t \'School Assignment\' \-b \'See attached\' \e
 .IP "" 0
 .
 .SH "BUGS"
-\fBApprise\fR is written in Python with 100% test coverage; but it still makes it far from perfect since the notification services it talks to change all the time\. If you find any bugs, please make them known at: \fIhttps://github\.com/caronc/apprise/issues\fR
+If you find any bugs, please make them known at: \fIhttps://github\.com/caronc/apprise/issues\fR
 .
 .SH "COPYRIGHT"
 Apprise is Copyright (C) 2020 Chris Caron \fIlead2gold@gmail\.com\fR
