updated manpage to reflect new cli options

--- a/packaging/man/apprise.1
+++ b/packaging/man/apprise.1
@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "APPRISE" "1" "July 2020" "" ""
+.TH "APPRISE" "1" "August 2020" "" ""
 .
 .SH "NAME"
 \fBapprise\fR \- Push Notifications that work with just about every platform!
@@ -67,6 +67,14 @@ Perform a trial run but only prints the notification services to\-be triggered t
 .TP
 \fB\-v\fR, \fB\-\-verbose\fR
 The more of these you specify, the more verbose the output is\.
+.
+.TP
+\fB\-Da\fR, \fB\-\-disable\-async\fR
+Send notifications synchronously (one after the other) instead of all at once\.
+.
+.TP
+\fB\-D\fR, \fB\-\-debug\fR
+A debug mode; useful for troubleshooting\.
 .
 .TP
 \fB\-V\fR, \fB\-\-version\fR
