--- a/apprise/i18n/apprise.pot
+++ b/apprise/i18n/apprise.pot
@@ -6,9 +6,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: apprise 0.8.7\n"
+"Project-Id-Version: apprise 0.8.8\n"
 "Report-Msgid-Bugs-To: lead2gold@gmail.com\n"
-"POT-Creation-Date: 2020-08-13 17:07-0400\n"
+"POT-Creation-Date: 2020-09-02 07:46-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -102,6 +102,9 @@ msgid "Consumer Secret"
 msgstr ""
 
 msgid "Country"
+msgstr ""
+
+msgid "Custom Icon"
 msgstr ""
 
 msgid "Cycles"
