--- a/apprise/i18n/apprise.pot
+++ b/apprise/i18n/apprise.pot
@@ -1,21 +1,21 @@
 # Translations template for apprise.
-# Copyright (C) 2020 Chris Caron
+# Copyright (C) 2021 Chris Caron
 # This file is distributed under the same license as the apprise project.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2020.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2021.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: apprise 0.9.0\n"
+"Project-Id-Version: apprise 0.9.1\n"
 "Report-Msgid-Bugs-To: lead2gold@gmail.com\n"
-"POT-Creation-Date: 2020-12-30 16:35-0500\n"
+"POT-Creation-Date: 2021-02-23 11:07-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.8.0\n"
+"Generated-By: Babel 2.8.1\n"
 
 msgid "API Key"
 msgstr ""
@@ -230,6 +230,9 @@ msgstr ""
 msgid "Log to STDERR"
 msgstr ""
 
+msgid "Long-Lived Access Token"
+msgstr ""
+
 msgid "Master Key"
 msgstr ""
 
@@ -248,10 +251,16 @@ msgstr ""
 msgid "Mode"
 msgstr ""
 
+msgid "Notification ID"
+msgstr ""
+
 msgid "Notify Format"
 msgstr ""
 
 msgid "OAuth Access Token"
+msgstr ""
+
+msgid "OAuth2 KeyFile"
 msgstr ""
 
 msgid "Organization"
@@ -425,6 +434,9 @@ msgstr ""
 msgid "Targets "
 msgstr ""
 
+msgid "Team Name"
+msgstr ""
+
 msgid "Template"
 msgstr ""
 
@@ -503,10 +515,16 @@ msgstr ""
 msgid "Webhook ID"
 msgstr ""
 
+msgid "Webhook Key"
+msgstr ""
+
 msgid "Webhook Mode"
 msgstr ""
 
 msgid "Webhook Token"
+msgstr ""
+
+msgid "Workspace"
 msgstr ""
 
 msgid "X-Axis"
