--- a/apprise/i18n/apprise.pot
+++ b/apprise/i18n/apprise.pot
@@ -6,9 +6,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: apprise 0.9.4\n"
+"Project-Id-Version: apprise 0.9.5\n"
 "Report-Msgid-Bugs-To: lead2gold@gmail.com\n"
-"POT-Creation-Date: 2021-08-11 22:08-0400\n"
+"POT-Creation-Date: 2021-09-18 15:12-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -317,6 +317,9 @@ msgstr ""
 msgid "Provider Key"
 msgstr ""
 
+msgid "QOS"
+msgstr ""
+
 msgid "Region"
 msgstr ""
 
@@ -428,6 +431,9 @@ msgstr ""
 msgid "Target Player ID"
 msgstr ""
 
+msgid "Target Queue"
+msgstr ""
+
 msgid "Target Room Alias"
 msgstr ""
 
@@ -513,6 +519,9 @@ msgid "Use Avatar"
 msgstr ""
 
 msgid "Use Fields"
+msgstr ""
+
+msgid "Use Session"
 msgstr ""
 
 msgid "User ID"
