--- a/apprise/i18n/apprise.pot
+++ b/apprise/i18n/apprise.pot
@@ -6,9 +6,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: apprise 0.9.5\n"
+"Project-Id-Version: apprise 0.9.5.1\n"
 "Report-Msgid-Bugs-To: lead2gold@gmail.com\n"
-"POT-Creation-Date: 2021-09-18 15:12-0400\n"
+"POT-Creation-Date: 2021-09-18 16:01-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -44,7 +44,13 @@ msgstr ""
 msgid "Add Tokens"
 msgstr ""
 
+msgid "Alert Type"
+msgstr ""
+
 msgid "Alias"
+msgstr ""
+
+msgid "Amount"
 msgstr ""
 
 msgid "App Access Token"
@@ -98,6 +104,9 @@ msgstr ""
 msgid "Cache Results"
 msgstr ""
 
+msgid "Call"
+msgstr ""
+
 msgid "Carbon Copy"
 msgstr ""
 
@@ -117,6 +126,9 @@ msgid "Consumer Secret"
 msgstr ""
 
 msgid "Country"
+msgstr ""
+
+msgid "Currency"
 msgstr ""
 
 msgid "Custom Icon"
@@ -218,6 +230,12 @@ msgstr ""
 msgid "Icon Type"
 msgstr ""
 
+msgid "Identifier"
+msgstr ""
+
+msgid "Image Link"
+msgstr ""
+
 msgid "Include Footer"
 msgstr ""
 
@@ -270,6 +288,9 @@ msgid "Mode"
 msgstr ""
 
 msgid "NSFW"
+msgstr ""
+
+msgid "Name"
 msgstr ""
 
 msgid "Notification ID"
@@ -377,6 +398,9 @@ msgstr ""
 msgid "Sound"
 msgstr ""
 
+msgid "Sound Link"
+msgstr ""
+
 msgid "Source Email"
 msgstr ""
 
@@ -386,10 +410,16 @@ msgstr ""
 msgid "Source Phone No"
 msgstr ""
 
+msgid "Special Text Color"
+msgstr ""
+
 msgid "Sticky"
 msgstr ""
 
 msgid "Subtitle"
+msgstr ""
+
+msgid "Syslog Mode"
 msgstr ""
 
 msgid "Tags"
