--- a/packaging/man/apprise.1
+++ b/packaging/man/apprise.1
@@ -1,6 +1,6 @@
 .\" generated with Ronn-NG/v0.9.1
 .\" http://github.com/apjanke/ronn-ng/tree/0.9.1
-.TH "APPRISE" "1" "November 2021" ""
+.TH "APPRISE" "1" "July 2022" ""
 .SH "NAME"
 \fBapprise\fR \- Push Notifications that work with just about every platform!
 .SH "SYNOPSIS"
@@ -25,6 +25,10 @@ The Apprise options are as follows:
 \fB\-c\fR, \fB\-\-config=\fR\fICONFIG\-URL\fR: Specify one or more configuration locations\.
 .P
 \fB\-a\fR, \fB\-\-attach=\fR\fIATTACH\-URL\fR: Specify one or more file attachment locations\.
+.P
+\fB\-P\fR, \fB\-\-plugin\-path=\fR\fIPLUGIN\-PATH\fR: Specify a path to scan for custom notification plugin support\. You can create your own notification by simply creating a Python file that contains the \fB@notify("schema")\fR decorator\.
+.P
+You can optioanly chose to specify more then one \fB\-\-plugin\-path\fR (\fB\-P\fR) to increase the modules included\.
 .P
 \fB\-n\fR, \fB\-\-notification\-type=\fR\fITYPE\fR: Specify the message type (default=info)\. Possible values are "info", "success", "failure", and "warning"\.
 .P
@@ -108,16 +112,47 @@ $ apprise \-vv \-t "School Assignment" \-b "See attached" \e
    \-\-attach=Documents/FinalReport\.docx
 .fi
 .IP "" 0
+.SH "CUSTOM PLUGIN/NOTIFICATIONS"
+Apprise can additionally allow you to define your own custom \fBschema://\fR entries that you can trigger on and call services you\'ve defined\.
+.P
+By default \fBapprise\fR looks in the following local locations for custom plugin files and loads them:
+.IP "" 4
+.nf
+~/\.apprise/plugins
+~/\.config/apprise/plugins
+.fi
+.IP "" 0
+.P
+Simply create your own python file with the following bare minimum content in it: from apprise\.decorators import notify
+.IP "" 4
+.nf
+# This example assumes you want your function to trigger on foobar://
+# references:
+@notify(on="foobar", name="My Custom Notification")
+def my_wrapper(body, title, notify_type, *args, **kwargs):
+
+     <define your custom code here>
+
+		# Returning True/False is a way to relay your status back to Apprise\.
+		# Returning nothing (None by default) is always interpreted as a Success
+     return True
+.fi
+.IP "" 0
 .SH "CONFIGURATION"
 A configuration file can be in the format of either \fBTEXT\fR or \fBYAML\fR where [TEXT][textconfig] is the easiest and most ideal solution for most users\. However YAML \fIhttps://github\.com/caronc/apprise/wiki/config_yaml\fR configuration files grants the user a bit more leverage and access to some of the internal features of Apprise\. Reguardless of which format you choose, both provide the users the ability to leverage \fBtagging\fR which adds a more rich and powerful notification environment\.
 .P
 Configuration files can be directly referenced via \fBapprise\fR when referencing the \fB\-\-config=\fR (\fB\-c\fR) CLI directive\. You can identify as many as you like on the command line and all of them will be loaded\. You can also point your configuration to a cloud location (by referencing \fBhttp://\fR or \fBhttps://\fR\. By default \fBapprise\fR looks in the following local locations for configuration files and loads them:
 .IP "" 4
 .nf
-$ ~/\.apprise
-$ ~/\.apprise\.yml
-$ ~/\.config/apprise
-$ ~/\.config/apprise\.yml
+~/\.apprise
+~/\.apprise\.yml
+~/\.config/apprise
+~/\.config/apprise\.yml
+
+~/\.apprise/apprise
+~/\.apprise/apprise\.yaml
+~/\.config/apprise/apprise
+~/\.config/apprise/apprise\.yaml
 .fi
 .IP "" 0
 .P
