--- a/apprise/i18n/apprise.pot
+++ b/apprise/i18n/apprise.pot
@@ -6,9 +6,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: apprise 0.9.9\n"
+"Project-Id-Version: apprise 1.0.0\n"
 "Report-Msgid-Bugs-To: lead2gold@gmail.com\n"
-"POT-Creation-Date: 2022-06-02 20:20-0400\n"
+"POT-Creation-Date: 2022-08-06 13:14-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -499,9 +499,6 @@ msgstr ""
 msgid "Source Email"
 msgstr ""
 
-msgid "Source JID"
-msgstr ""
-
 msgid "Source Phone No"
 msgstr ""
 
@@ -551,9 +548,6 @@ msgid "Target Escalation"
 msgstr ""
 
 msgid "Target Group ID"
-msgstr ""
-
-msgid "Target JID"
 msgstr ""
 
 msgid "Target Phone No"
@@ -620,6 +614,9 @@ msgid "Tenant Domain"
 msgstr ""
 
 msgid "Text To Speech"
+msgstr ""
+
+msgid "Thread ID"
 msgstr ""
 
 msgid "To Channel ID"
@@ -716,9 +713,6 @@ msgid "Workspace"
 msgstr ""
 
 msgid "X-Axis"
-msgstr ""
-
-msgid "XEP"
 msgstr ""
 
 msgid "Y-Axis"
