--- a/apprise/i18n/apprise.pot
+++ b/apprise/i18n/apprise.pot
@@ -6,16 +6,16 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: apprise 1.1.0\n"
+"Project-Id-Version: apprise 1.2.0\n"
 "Report-Msgid-Bugs-To: lead2gold@gmail.com\n"
-"POT-Creation-Date: 2022-10-08 14:03-0400\n"
+"POT-Creation-Date: 2022-11-15 18:36+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.9.1\n"
+"Generated-By: Babel 2.11.0\n"
 
 msgid "A local Gnome environment is required."
 msgstr ""
@@ -263,6 +263,9 @@ msgstr ""
 msgid "From Phone No"
 msgstr ""
 
+msgid "GET Params"
+msgstr ""
+
 msgid "Gnome Notification"
 msgstr ""
 
@@ -279,6 +282,9 @@ msgid "IRC Colors"
 msgstr ""
 
 msgid "Icon Type"
+msgstr ""
+
+msgid "Idempotency-Key"
 msgstr ""
 
 msgid "Identifier"
@@ -306,6 +312,9 @@ msgid "Kind"
 msgstr ""
 
 msgid "Language"
+msgstr ""
+
+msgid "Language Code"
 msgstr ""
 
 msgid "Level"
@@ -478,10 +487,16 @@ msgstr ""
 msgid "Sender ID"
 msgstr ""
 
+msgid "Sensitive Attachments"
+msgstr ""
+
 msgid "Server Key"
 msgstr ""
 
 msgid "Server Timeout"
+msgstr ""
+
+msgid "Severity"
 msgstr ""
 
 msgid "Show Status"
@@ -512,6 +527,9 @@ msgid "Source Phone No"
 msgstr ""
 
 msgid "Special Text Color"
+msgstr ""
+
+msgid "Spoiler Text"
 msgstr ""
 
 msgid "Sticky"
@@ -637,6 +655,9 @@ msgstr ""
 msgid "Thread ID"
 msgstr ""
 
+msgid "Thread Key"
+msgstr ""
+
 msgid "To Channel ID"
 msgstr ""
 
@@ -707,6 +728,9 @@ msgid "Version"
 msgstr ""
 
 msgid "Vibration"
+msgstr ""
+
+msgid "Visibility"
 msgstr ""
 
 msgid "Web Based"
