--- a/apprise/i18n/apprise.pot
+++ b/apprise/i18n/apprise.pot
@@ -6,9 +6,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: apprise 1.3.0\n"
+"Project-Id-Version: apprise 1.4.0\n"
 "Report-Msgid-Bugs-To: lead2gold@gmail.com\n"
-"POT-Creation-Date: 2023-02-22 17:31-0500\n"
+"POT-Creation-Date: 2023-05-15 16:33-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -454,6 +454,9 @@ msgstr ""
 msgid "QOS"
 msgstr ""
 
+msgid "Query Method"
+msgstr ""
+
 msgid "Region"
 msgstr ""
 
@@ -704,6 +707,9 @@ msgid "Token C"
 msgstr ""
 
 msgid "Topic"
+msgstr ""
+
+msgid "Topic Thread ID"
 msgstr ""
 
 msgid "Transmitter Groups"
