--- a/apprise/i18n/apprise.pot
+++ b/apprise/i18n/apprise.pot
@@ -6,9 +6,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: apprise 1.5.0\n"
+"Project-Id-Version: apprise 1.6.0\n"
 "Report-Msgid-Bugs-To: lead2gold@gmail.com\n"
-"POT-Creation-Date: 2023-08-27 13:09-0400\n"
+"POT-Creation-Date: 2023-10-15 15:56-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -210,6 +210,9 @@ msgid "Device ID"
 msgstr ""
 
 msgid "Device Name"
+msgstr ""
+
+msgid "Discord Event ID"
 msgstr ""
 
 msgid "Display Footer"
@@ -439,6 +442,12 @@ msgstr ""
 msgid "Payload Extras"
 msgstr ""
 
+msgid "Ping Discord Role"
+msgstr ""
+
+msgid "Ping Discord User"
+msgstr ""
+
 msgid "Port"
 msgstr ""
 
@@ -490,9 +499,6 @@ msgstr ""
 msgid "Room ID"
 msgstr ""
 
-msgid "Route"
-msgstr ""
-
 msgid "Route Group"
 msgstr ""
 
@@ -536,6 +542,9 @@ msgid "Server Timeout"
 msgstr ""
 
 msgid "Severity"
+msgstr ""
+
+msgid "Short URL"
 msgstr ""
 
 msgid "Show Status"
@@ -673,6 +682,9 @@ msgstr ""
 msgid "Template Data"
 msgstr ""
 
+msgid "Template ID"
+msgstr ""
+
 msgid "Template Mapping"
 msgstr ""
 
@@ -734,6 +746,9 @@ msgid "Transmitter Groups"
 msgstr ""
 
 msgid "URL"
+msgstr ""
+
+msgid "URL Prefix"
 msgstr ""
 
 msgid "URL Title"
