--- a/packaging/man/apprise.1
+++ b/packaging/man/apprise.1
@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "APPRISE" "1" "January 2024" "Chris Caron <lead2gold@gmail.com>" ""
+.TH "APPRISE" "1" "March 2024" "Chris Caron <lead2gold@gmail.com>" ""
 .
 .SH "NAME"
 \fBapprise\fR \- Push Notifications that work with just about every platform!
@@ -235,18 +235,24 @@ Configuration files can be directly referenced via \fBapprise\fR when referencin
 
 ~/\.apprise
 ~/\.apprise\.yml
+~/\.apprise\.yaml
 ~/\.config/apprise
 ~/\.config/apprise\.yml
+~/\.config/apprise\.yaml
 
 ~/\.apprise/apprise
+~/\.apprise/apprise\.yml
 ~/\.apprise/apprise\.yaml
 ~/\.config/apprise/apprise
+~/\.config/apprise/apprise\.yml
 ~/\.config/apprise/apprise\.yaml
 
 /etc/apprise
 /etc/apprise\.yml
+/etc/apprise\.yaml
 /etc/apprise/apprise
 /etc/apprise/apprise\.yml
+/etc/apprise/apprise\.yaml
 .
 .fi
 .
